[gd_scene load_steps=24 format=2]

[ext_resource path="res://woman/woman/woman/man/stunt-love.gd" type="Script" id=1]
[ext_resource path="res://anim/5-stunt-love-woman0000.png" type="Texture" id=2]
[ext_resource path="res://anim/5-stunt-love-woman0001.png" type="Texture" id=3]
[ext_resource path="res://anim/5-stunt-love-woman0002.png" type="Texture" id=4]
[ext_resource path="res://anim/5-stunt-love-woman0003.png" type="Texture" id=5]
[ext_resource path="res://anim/5-stunt-love-woman0004.png" type="Texture" id=6]
[ext_resource path="res://anim/5-stunt-love-woman0005.png" type="Texture" id=7]
[ext_resource path="res://anim/5-stunt-love-man0000.png" type="Texture" id=8]
[ext_resource path="res://anim/5-stunt-love-man0001.png" type="Texture" id=9]
[ext_resource path="res://anim/5-stunt-love-man0002.png" type="Texture" id=10]
[ext_resource path="res://anim/5-stunt-love-man0003.png" type="Texture" id=11]
[ext_resource path="res://anim/5-stunt-love-man0004.png" type="Texture" id=12]
[ext_resource path="res://anim/5-stunt-love-woman0007.png" type="Texture" id=13]
[ext_resource path="res://anim/5-stunt-love-woman0006.png" type="Texture" id=14]
[ext_resource path="res://anim/5-stunt-love-man0018.png" type="Texture" id=15]
[ext_resource path="res://ui/retry.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/HUD.tscn" type="PackedScene" id=17]
[ext_resource path="res://ui/HUD2.tscn" type="PackedScene" id=18]

[sub_resource type="Animation" id=5]

resource_name = "curtain"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("curtain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="stunt-love" type="Node2D"]

script = ExtResource( 1 )

[node name="CurtainPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/curtain = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "curtain"

[node name="bg" type="ColorRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect" ]

[node name="IntroWoman" type="AnimatedSprite" parent="."]

position = Vector2( 892, 355 )
scale = Vector2( 1, 1 )
frames = SubResource( 1 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="IntroMan" type="AnimatedSprite" parent="."]

position = Vector2( 394, 376 )
scale = Vector2( 1, 1 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Woman" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 892, 355 )
scale = Vector2( 1, 1 )
frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="Man" type="AnimatedSprite" parent="."]

visible = false
position = Vector2( 394, 376 )
scale = Vector2( 1, 1 )
frames = SubResource( 4 )
animation = "default"
_sections_unfolded = [ "Transform" ]

[node name="curtain" type="ColorRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="retry" parent="." instance=ExtResource( 16 )]

scale = Vector2( 1, 1 )

[node name="HUD" parent="." instance=ExtResource( 17 )]

[node name="HUD2" parent="." instance=ExtResource( 18 )]

[connection signal="animation_finished" from="IntroWoman" to="." method="_on_IntroWoman_animation_finished"]


